# hqif

./: .travis.yml  Bench.hs  ChangeLog.md  Main.hs  README.md  hqif.cabal
app/: Main.hs
bench/: Bench.hs  Main.hs
src/: Lib.hs  LibTwo.hs
src/Data/: Qif.hs
src/Data/Qif/: Internal.hs  Sample.hs  Types.hs
test/: HQifSpec.hs  HqifSpec.hs  ParseSpec.hs  hqifSpec.hs
