name:                hqif
-- Package version according to Haskell package versioning policy (PVP) 
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0
synopsis:            TODO: write synopsis
description:         TODO: write description
homepage:            https://github.com/jonathankochems/hqif#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Kochems
maintainer:          jonathan.kochems@gmail.com
copyright:           BSD3
category:            TODO: pick category
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Qif
                     , Data.Qif.Sample
  other-modules:       Data.Qif.Types
                     , Data.Qif.Internal
  build-depends:       base >= 4.7 && < 5
                     , time
                     , parsec
                     , QuickCheck >= 2.9.2
  default-language:    Haskell2010

Benchmark hqif-bench
    type:       exitcode-stdio-1.0
    hs-source-dirs: bench/
    main-is:       Main.hs
    other-modules: Bench
    build-depends: base
                 , hspec >= 1.3
                 , QuickCheck >= 2.6
                 , time
                 , deepseq
                 , hqif
                 , criterion

test-suite hqif-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HQifSpec
  build-depends:       base
                     , hspec >= 1.3
                     , QuickCheck >= 2.6
                     , time
                     , hqif
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  default-language:    Haskell2010

-- Source repository information for development branch
source-repository head
  type:     git
  location: https://github.com/jonathankochems/hqif
  branch:   develop

-- Source repository information for this version of the package
source-repository this
  type:     git
  location: https://github.com/jonathankochems/hqif
  branch:   master
  tag:      tip
